--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										<ul class="address-text">
 											<li><b>地址 </b></li>
 											<li>: </li>
-											<li> <span class="w3">waiter's hours </span></li>
+											<li> <span class="w3">waiter's house </span></li>
 										</ul>
 									</li>
 									<li>
